la creation de commandeService

--- a/src/views/livreur/dashboard-livreur.html
+++ b/src/views/livreur/dashboard-livreur.html
@@ -61,7 +61,7 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item text-danger" href="../auth/index.html">Déconnexion</a></li>
+                            <li><a class="dropdown-item text-danger" href="../index.html">Déconnexion</a></li>
                         </ul>
                     </li>
                 </ul>
