--- a/src/views/admin/dashboard-admin.html
+++ b/src/views/admin/dashboard-admin.html
@@ -63,7 +63,7 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item text-danger" href="../auth/index.html"><i
+                            <li><a class="dropdown-item text-danger" href="../index.html"><i
                                         class="bi bi-box-arrow-right me-2"></i>Déconnexion</a></li>
                         </ul>
                     </li>
