--- a/src/views/auth/login.html
+++ b/src/views/auth/login.html
@@ -247,7 +247,7 @@
         </div>
 
         <div class="text-center mt-4">
-            <a href="index.html" class="text-muted small text-decoration-none opacity-75 hover-opacity-100">
+            <a href="../index.html" class="text-muted small text-decoration-none opacity-75 hover-opacity-100">
                 <i class="bi bi-arrow-left me-1"></i> Retour à l'accueil
             </a>
         </div>
