--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -42,10 +42,10 @@
                         <a class="nav-link" href="#roles">Solutions</a>
                     </li>
                     <li class="nav-item ms-lg-3">
-                        <a href="login.html" class="btn btn-outline-custom me-2">Connexion</a>
+                        <a href="auth/login.html" class="btn btn-outline-custom me-2">Connexion</a>
                     </li>
                     <li class="nav-item">
-                        <a href="register.html" class="btn btn-primary-custom">Inscription</a>
+                        <a href="auth/register.html" class="btn btn-primary-custom">Inscription</a>
                     </li>
                 </ul>
             </div>
@@ -66,7 +66,7 @@
                         Simple, rapide et sécurisé.
                     </p>
                     <div class="d-flex gap-3">
-                        <a href="register.html" class="btn btn-primary-custom btn-lg">Commencer maintenant</a>
+                        <a href="auth/register.html" class="btn btn-primary-custom btn-lg">Commencer maintenant</a>
                         <a href="#how-it-works" class="btn btn-outline-custom btn-lg">En savoir plus</a>
                     </div>
 
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 mt-5 mt-lg-0 text-center">
-                    <img src="../assets/img/hero.png" alt="Livraison Illustration"
+                    <img src="assets/img/hero.png" alt="Livraison Illustration"
                          class="img-fluid rounded-4 shadow-lg animate-up">
                 </div>
             </div>
@@ -196,7 +196,7 @@
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
